--- a/anime-front/assets/css/estilos.css
+++ b/anime-front/assets/css/estilos.css
@@ -2,7 +2,7 @@ body {
     background-color: black;
     overflow: hidden;
 }
-
+/* tirar a sombra */
 main::after {
     content: "aa";
     position: fixed;
