--- a/anime-front/assets/css/estilos.css
+++ b/anime-front/assets/css/estilos.css
@@ -3,7 +3,7 @@ body {
     overflow: hidden;
 }
 /* tirar a sombra */
-main::after {
+/* main::after {
     content: "aa";
     position: fixed;
     top: 0;
@@ -12,7 +12,7 @@ main::after {
     min-height: 100vh;
     width: 80vw;
     background: linear-gradient(-233deg, black 40%, rgba(0, 0, 0, 0) 65%) no-repeat;
-}
+} */
 
 main .personagem {
     display: none;
@@ -42,7 +42,7 @@ main .personagem .imagem {
 }
 
 .conteudo .nome-personagem {
-    background-color: green;
+    /* background-color: green; */
     color: white;
     font-size: 48px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -51,14 +51,14 @@ main .personagem .imagem {
 }
 
 .conteudo .descricao {
-    background-color: aqua;
+    /* background-color: aqua; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     line-height: 24px;
 }
 
 .conteudo .logo {
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     background-image: url("../img/icon\ test.png");
     background-size: cover;
     height: 100px;
