--- a/anime-front/assets/css/estilos.css
+++ b/anime-front/assets/css/estilos.css
@@ -81,7 +81,7 @@ main .personagem .imagem {
 }
 .botoes .botao{
     border: none;
-    background: none;
+    background: black;
     cursor: pointer;
     border-radius: 50%;
 }
